<resources>
    <string name="app_name">Netronic</string>
    <string name="action_settings">Налаштування</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Users</string>
    <string name="second_fragment_label">User Info</string>
    <string name="third_fragment_label">History</string>
    <string name="get_fact">Get users</string>
    <string name="get_random_fact">Get Users</string>
    <string name="type_number">Enter the number</string>
    <string name="previous">Back</string>
    <string name="selected_number">Вибране число: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="load_users">Loading users start</string>
    <string name="gender">Gender:</string>
    <string name="date_of_birthday">Date of Birthday:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="history">Show History</string>

</resources>